--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,30 +14,36 @@
  *= require_self
  */
 
+@import 'variables';
+
+* {
+  box-sizing: border-box;
+}
+
+::placeholder {
+  color: $gray;
+  opacity: 1;
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
 
   font-size: 18px;
-  font-family: Meta Pro, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI,
-    Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
-    sans-serif;
+  font-family: $display-font;
   font-weight: 400;
+  font-kerning: normal;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  line-height: 1.6;
-  color: #000;
+  line-height: 1.5;
+  color: $text-color;
 }
 
 a {
   color: inherit;
-  text-decoration: underline;
-}
-
-strong {
-  font-weight: 500;
+  text-decoration: none;
 }
 
 hr {
@@ -52,133 +58,356 @@ h3,
 h4,
 h5,
 h6 {
-  font-size: 1.25rem;
-  font-weight: 600;
-  line-height: 1.2;
-  margin: 1rem 0 0.5rem;
+  margin-bottom: 1rem;
+  line-height: 1.25;
 }
 
-* {
-  box-sizing: border-box;
+blockquote {
+  border-left: 5px solid $accent-color;
+  margin-left: 0.5rem;
+  padding-left: 0.5rem;
 }
 
-button {
+.actions button,
+.actions input[type="submit"],
+.button {
+  cursor: pointer;
   background: transparent;
   border: 0;
   outline: 0;
   font-family: inherit;
   font-size: inherit;
+  font-weight: inherit;
+  line-height: inherit;
   color: inherit;
+  padding: 0;
 }
 
-.container {
-  max-width: 640px;
-  margin: 0 auto;
-  padding: 3rem 1rem;
+.actions button,
+.actions input[type="submit"],
+.button--styled {
+  background: $accent-color;
+  color: #fff;
+  padding: 0.5rem 1rem;
+  box-shadow: none;
+  font-weight: 600;
+  border-radius: 4px;
+  transition: filter 0.3s;
+  will-change: transform;
 }
 
-.subscribe {
-  display: flex;
+.actions button:hover,
+.actions input[type="submit"]:hover,
+.button--styled:hover {
+  filter: drop-shadow(0 2px 5px #0005);
 }
 
 input[type="text"],
 input[type="email"],
-trix-editor {
-  padding: 0 16px;
-  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
+input[type="password"] {
+  padding: 0 1rem;
+  box-shadow: 0 0 0 1px #f4f4f4;
   font-family: inherit;
   border-radius: 4px;
   border: 0;
   outline: 0;
   appearance: none;
-  font-size: 16px;
+  font-size: 1rem;
   line-height: 28px;
   flex: 1 1 auto;
   width: 100%;
-  transition: box-shadow 0.2s ease-in-out;
-}
-
-trix-editor {
-  padding: 16px;
-  min-height: 50vh;
-}
-
-trix-editor:empty:not(:focus)::before {
-  color: #888;
-}
-
-input[type="text"],
-input[type="email"] {
   min-height: 44px;
+  transition: box-shadow 0.2s ease-in-out;
 }
 
 input[type="text"]:focus,
 input[type="email"]:focus,
-trix-editor:focus {
-  box-shadow: 0 0 0 4px rgba(45, 97, 165, 0.1), 0 0 0 1px rgba(68, 84, 226, 0.4);
+input[type="password"]:focus {
+  box-shadow: 0 0 0 4px #93c5fd66,
+    0 0 0 1px #93c5fd;
 }
 
-input[type="submit"] {
-  background: rgb(68, 84, 226);
-  color: #fff;
-  padding: 0 16px;
-  box-shadow: 0 0 0 1px rgb(45, 60, 197);
-  font-family: inherit;
-  font-weight: 500;
-  min-height: 44px;
-  border-radius: 4px;
-  border: 0;
-  outline: 0;
-  appearance: none;
-  font-size: 16px;
-  line-height: 28px;
-  cursor: pointer;
-  transition: background 0.2s ease-in-out;
+.container {
+  max-width: 720px;
+  margin: 0 auto;
+  padding: 0 1rem;
 }
 
-input[type="submit"]:hover {
-  background: rgb(60, 74, 207);
+.flash {
+  background: #f4f4f4;
+  padding: 1rem;
 }
 
-.subscribe input[type="submit"] {
-  margin-left: 10px;
-  flex: 1 1 200px;
-  width: 100%;
+.subscribe__form {
+  display: flex;
 }
 
-.subscribe-message {
-  font-size: 0.9rem;
+input[type="email"].subscribe__email {
+  margin-right: 1rem;
 }
 
-.posts-list {
-  margin: 0;
+.navbar {
+  margin-bottom: 2rem;
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid #f4f4f4;
+  padding: 0;
 }
 
-.posts-list h2 {
-  font-size: 1.5rem;
+.navbar a {
+  color: $gray;
+  transition: color 0.2s ease-in-out;
 }
 
-.posts-list ul {
+.navbar a:hover {
+  color: $text-color;
+}
+
+.home-link:hover .home-link__icon {
+  border-color: $text-color;
+}
+
+.home-link__icon {
+  color: $text-color;
+  border: 1px solid #f4f4f4;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+  padding-right: 3px;
+  margin-right: 0.25rem;
+  display: inline-flex;
+  transition: border 0.2s ease-in-out;
+}
+
+.list--unstyled {
   list-style: none;
   padding: 0;
 }
 
-.posts-list li {
-  margin: 0.25rem 0;
+.list--horizontal {
+  display: flex;
+  align-items: baseline;
+}
+
+.list--horizontal li {
+  margin-right: 1rem;
+}
+
+.list--vertical {
+  .list__item {
+    padding: 1rem 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 1px solid #f4f4f4;
+    
+    &:first-of-type {
+      padding-top: 0;
+    }
+    
+    &:last-of-type {
+      border-bottom: 0;
+      padding-bottom: 0;
+    }
+  }
+}
+
+.item__info {
+  margin: 0 0.5rem;
+
+  &:first-child {
+    margin-left: 0;
+  }
+
+  &:last-child {
+    margin-right: 0;
+  }
+}
+
+.item__info--link {
+  text-decoration: none;
+  flex: 1;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+
+  &:hover {
+    text-decoration: none;
+    
+    & .link--primary, &.link--primary {
+      text-decoration: underline;
+    }
+  }
+}
+
+.item__info--meta {
+  color: $gray;
+}
+
+.link--primary {
+  font-weight: 600;
+  color: $accent-color;
+}
+
+.link--secondary {
+  color: $gray;
+}
+
+.action--affirm {
+  color: #34cc43;
+  
+  &:hover {
+    color: #33ea33;
+  }
+}
+
+.action--danger {
+  color: #ea7777;
+  
+  &:hover {
+    color: #ea3333;
+  }
+}
+
+.empty-message {
+  color: $gray;
+}
+
+.footer {
+  margin: 2rem 0;
+  padding-top: 1rem;
+  border-top: 1px solid #f4f4f4;
+  color: $gray;
+  display: flex;
+  justify-content: space-between;
+}
+
+.header {
+  display: flex;
+  margin: 3rem 0 1rem;
+}
+
+@media screen and (max-width: 640px) {
+  .header {
+    flex-direction: column;
+    align-items: flex-start;
+    margin-bottom: 0;
+  }
+}
+
+.header__title {
+  color: $accent-color;
+  margin: 0 0 0.5rem;
+}
+
+.header__description {
+  margin-top: 0;
+}
+
+.header__about {
+  flex: 1;
+}
+
+.header__stats {
+  margin: 1rem 0;
+  font-size: 14px;
+  letter-spacing: 1px;
+  color: $gray;
+  text-transform: uppercase;
+  font-variant-numeric: lining-nums;
+}
+
+.header__logo {
+  height: 128px;
+  width: 128px;
+  margin: 0 2rem 1rem 0;
+  border-radius: 8px;
+  box-shadow: 0 0 15px -5px rgba(0, 0, 0, 0.5);
+}
+
+.post__actions {
+  padding: 1rem 1.5rem;
+  background: $accent-color;
+  border-radius: 8px;
+  margin-bottom: 2rem;
+  font-weight: 600;
+  color: #fff;
+}
+
+.post__title {
+  font-size: 1.5rem;
+  margin: 0 0 0.5rem;
+}
+
+.post__subtitle {
+  font-size: 1.25rem;
+  color: #666;
+  font-weight: 400;
+  margin-top: 0;
+  margin-bottom: 2rem;
+}
+
+.post__content a {
+  color: $accent-color;
+}
+
+.post__content ol,
+.post__content ul {
+  padding-left: 1rem;
+}
+
+.post__content li {
+  padding: 0.25rem 0;
+}
+
+.post__meta {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-.posts-list li a {
-  font-weight: 500;
-  text-decoration: none;
+.post__time {
+  color: $gray;
+  margin-right: 1rem;
 }
 
-.posts-list li a:hover {
-  text-decoration: underline;
+.field,
+.actions {
+  margin-bottom: 1rem;
 }
 
-.posts-list--empty {
-  color: #888;
+.ribbon {
+  border-top: 5px solid $accent-color;
+  width: 100%;
+}
+
+.dashboard-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+}
+
+.field--title#post_title,
+.field--subtitle#post_subtitle {
+  box-shadow: none;
+  border-radius: 0;
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.field--title#post_title:hover,
+.field.field--subtitle#post_subtitle:hover {
+  box-shadow: none;
+}
+
+.field--title#post_title {
+  @extend .post__title;
+  font-weight: 700;
+  margin-bottom: 0;
+}
+
+.field--subtitle#post_subtitle {
+  @extend .post__subtitle;
 }
