--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
 <div class="footer">
-  <div class="footer__copyright">© 2020 Kabir Goel</div>
+  <div class="footer__copyright">© 2020 <%= Newsletter.author %></div>
   <div class="footer__platform">Powered by Rucksack</div>
 </div>
