--- a/app/views/newsletter_mailer/welcome.html.erb
+++ b/app/views/newsletter_mailer/welcome.html.erb
@@ -1,2 +1,2 @@
-<h1>Welcome to Great Stuff!</h1>
-<p>You have successfully signed up to Great Stuff by Kabir Goel.</p>
+<h1>Welcome to <%= Newsletter.title %>!</h1>
+<p>You have successfully signed up to <%= Newsletter.title %>.</p>
