--- a/app/views/newsletter_mailer/welcome.text.erb
+++ b/app/views/newsletter_mailer/welcome.text.erb
@@ -1,2 +1,2 @@
-Welcome to Great Stuff!
-You have successfully signed up to Great Stuff by Kabir Goel.
+Welcome to <%= Newsletter.title %>!
+You have successfully signed up to <%= Newsletter.title %>.
