--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,400 +14,192 @@
  *= require_self
  */
 
-@import 'variables';
-
-* {
-  box-sizing: border-box;
-}
-
-::placeholder {
-  color: $gray;
-  opacity: 1;
-}
-
-html,
-body {
-  padding: 0;
-  margin: 0;
-
-  font-size: 18px;
-  font-family: $display-font;
-  font-weight: 400;
-  font-kerning: normal;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  line-height: 1.5;
-  color: $text-color;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-hr {
-  border: 0;
-  border-top: 1px solid #f4f4f4;
-  margin: 2rem 0;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin-bottom: 1rem;
-  line-height: 1.25;
-}
-
-blockquote {
-  border-left: 5px solid $accent-color;
-  margin-left: 0.5rem;
-  padding-left: 0.5rem;
-}
-
-.actions button,
-.actions input[type="submit"],
-.button {
-  cursor: pointer;
-  background: transparent;
-  border: 0;
-  outline: 0;
-  font-family: inherit;
-  font-size: inherit;
-  font-weight: inherit;
-  line-height: inherit;
-  color: inherit;
-  padding: 0;
-}
-
-.actions button,
-.actions input[type="submit"],
-.button--styled {
-  background: $accent-color;
-  color: #fff;
-  padding: 0.5rem 1rem;
-  box-shadow: none;
-  font-weight: 600;
-  border-radius: 4px;
-  transition: filter 0.3s;
-  will-change: transform;
-}
-
-.actions button:hover,
-.actions input[type="submit"]:hover,
-.button--styled:hover {
-  filter: drop-shadow(0 2px 5px #0005);
-}
-
-input[type="text"],
-input[type="email"],
-input[type="password"] {
-  padding: 0 1rem;
-  box-shadow: 0 0 0 1px #f4f4f4;
-  font-family: inherit;
-  border-radius: 4px;
-  border: 0;
-  outline: 0;
-  appearance: none;
-  font-size: 1rem;
-  line-height: 28px;
-  flex: 1 1 auto;
-  width: 100%;
-  min-height: 44px;
-  transition: box-shadow 0.2s ease-in-out;
-}
-
-input[type="text"]:focus,
-input[type="email"]:focus,
-input[type="password"]:focus {
-  box-shadow: 0 0 0 4px #93c5fd66,
-    0 0 0 1px #93c5fd;
-}
-
-.container {
-  max-width: 720px;
-  margin: 0 auto;
-  padding: 0 1rem;
-}
-
-.flash {
-  background: #f4f4f4;
-  padding: 1rem;
-}
-
-.subscribe__form {
-  display: flex;
-}
-
-input[type="email"].subscribe__email {
-  margin-right: 1rem;
-}
-
-.navbar {
-  margin-bottom: 2rem;
-  display: flex;
-  justify-content: space-between;
-  border-bottom: 1px solid #f4f4f4;
-  padding: 0;
-}
-
-.navbar a {
-  color: $gray;
-  transition: color 0.2s ease-in-out;
-}
-
-.navbar a:hover {
-  color: $text-color;
-}
-
-.home-link:hover .home-link__icon {
-  border-color: $text-color;
-}
-
-.home-link__icon {
-  color: $text-color;
-  border: 1px solid #f4f4f4;
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  align-items: center;
-  justify-content: center;
-  padding-right: 3px;
-  margin-right: 0.25rem;
-  display: inline-flex;
-  transition: border 0.2s ease-in-out;
-}
-
-.list--unstyled {
-  list-style: none;
-  padding: 0;
-}
-
-.list--horizontal {
-  display: flex;
-  align-items: baseline;
-}
-
-.list--horizontal li {
-  margin-right: 1rem;
-}
-
-.list--vertical {
-  .list__item {
-    padding: 1rem 0;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    border-bottom: 1px solid #f4f4f4;
-    
-    &:first-of-type {
-      padding-top: 0;
-    }
-    
-    &:last-of-type {
-      border-bottom: 0;
-      padding-bottom: 0;
-    }
-  }
-}
-
-.item__info {
-  margin: 0 0.5rem;
-
-  &:first-child {
-    margin-left: 0;
-  }
-
-  &:last-child {
-    margin-right: 0;
-  }
-}
-
-.item__info--link {
-  text-decoration: none;
-  flex: 1;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-
-  &:hover {
-    text-decoration: none;
-    
-    & .link--primary, &.link--primary {
-      text-decoration: underline;
-    }
-  }
-}
-
-.item__info--meta {
-  color: $gray;
-}
-
-.link--primary {
-  font-weight: 600;
-  color: $accent-color;
-}
-
-.link--secondary {
-  color: $gray;
-}
-
-.action--affirm {
-  color: #34cc43;
-  
-  &:hover {
-    color: #33ea33;
-  }
-}
-
-.action--danger {
-  color: #ea7777;
-  
-  &:hover {
-    color: #ea3333;
-  }
-}
-
-.empty-message {
-  color: $gray;
-}
-
-.footer {
-  margin: 2rem 0;
-  padding-top: 1rem;
-  border-top: 1px solid #f4f4f4;
-  color: $gray;
-  display: flex;
-  justify-content: space-between;
-}
+/*
+ * posts#index
+ */
 
 .header {
-  display: flex;
-  margin: 3rem 0 1rem;
-}
-
-@media screen and (max-width: 640px) {
-  .header {
-    flex-direction: column;
-    align-items: flex-start;
-    margin-bottom: 0;
-  }
-}
-
-.header__title {
-  color: $accent-color;
-  margin: 0 0 0.5rem;
-}
-
-.header__description {
-  margin-top: 0;
-}
-
-.header__about {
-  flex: 1;
-}
-
-.header__stats {
-  margin: 1rem 0;
-  font-size: 14px;
-  letter-spacing: 1px;
-  color: $gray;
-  text-transform: uppercase;
-  font-variant-numeric: lining-nums;
+  padding: var(--large) 0;
+  border-bottom: 1px solid var(--color-stroke);
 }
 
 .header__logo {
-  height: 128px;
   width: 128px;
-  margin: 0 2rem 1rem 0;
+  height: 128px;
   border-radius: 8px;
   box-shadow: 0 0 15px -5px rgba(0, 0, 0, 0.5);
 }
 
-.post__actions {
-  padding: 1rem 1.5rem;
-  background: $accent-color;
-  border-radius: 8px;
-  margin-bottom: 2rem;
-  font-weight: 600;
+.header__description {
+  color: var(--color-light);
+}
+
+.header__stats {
+  color: var(--color-light);
+  font-size: var(--font-size-small);
+}
+
+.subscribe {
+  margin: var(--small) 0;
+}
+
+.subscribe form {
+  display: flex;
+}
+
+.subscribe input[type="email"] {
+  flex: 1;
+}
+
+.subscribe input[type="submit"] {
+  background: var(--color-accent);
   color: #fff;
+  border-radius: 4px;
+  margin-left: var(--tiny);
 }
 
-.post__title {
-  font-size: 1.5rem;
-  margin: 0 0 0.5rem;
+.index {
+  padding: var(--large) 0;
 }
 
-.post__subtitle {
-  font-size: 1.25rem;
-  color: #666;
-  font-weight: 400;
-  margin-top: 0;
-  margin-bottom: 2rem;
+/*
+ * posts#post
+ */
+
+.post {
+  padding: var(--small) 0;
+  display: block;
+  position: relative;
 }
 
-.post__content a {
-  color: $accent-color;
+.post::before {
+  content: "";
+
+  position: absolute;
+  z-index: -1;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: 0 calc(-1 * var(--small));
+  border-radius: 8px;
 }
 
-.post__content ol,
-.post__content ul {
-  padding-left: 1rem;
+.post:hover::before {
+  background: var(--color-stroke);
 }
 
-.post__content li {
-  padding: 0.25rem 0;
+.post h2 {
+  font-family: var(--font-family-body);
+  font-weight: var(--font-weight-normal);
+  font-size: var(--font-size-body);
+  color: var(--color-light);
+
+  width: 100%;
+  margin: 0 0 var(--micro);
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
-.post__meta {
+.post .link--primary {
+  color: var(--color-display);
+}
+
+.post time {
+  font-size: var(--font-size-small);
+  color: var(--color-light);
+}
+
+/*
+ * writers#writer, subscribers#subscriber
+ */
+.writer,
+.subscriber {
+  border: 1px solid var(--color-stroke);
+  border-radius: 4px;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding: var(--medium);
+  margin: var(--small) 0;
 }
 
-.post__time {
-  color: $gray;
-  margin-right: 1rem;
+.link--secondary {
+  color: var(--color-light);
 }
 
-.field,
-.actions {
-  margin-bottom: 1rem;
+.action--danger {
+  font-weight: var(--font-weight-bold);
+  color: var(--color-light);
 }
 
-.ribbon {
-  border-top: 5px solid $accent-color;
-  width: 100%;
+.action--danger:hover {
+  color: rgb(204, 93, 93);
 }
 
-.dashboard-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: baseline;
+/*
+ * dashboards#show
+ */
+.tag {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  height: var(--small);
+  border-radius: 4px;
+  padding: 0 var(--extra-small);
+  margin: 0 0 0 var(--micro);
+
+  color: #fff;
+  background: var(--color-light);
+  font-weight: var(--font-weight-bold);
+  font-size: var(--font-size-tiny);
+  letter-spacing: 1px;
+  text-transform: uppercase;
 }
 
-.field--title#post_title,
-.field--subtitle#post_subtitle {
-  box-shadow: none;
-  border-radius: 0;
-  padding-left: 0;
-  padding-right: 0;
-}
-
-.field--title#post_title:hover,
-.field.field--subtitle#post_subtitle:hover {
-  box-shadow: none;
-}
-
-.field--title#post_title {
-  @extend .post__title;
-  font-weight: 700;
+/*
+ * posts#show
+ */
+article h1 {
+  color: var(--color-display);
   margin-bottom: 0;
 }
 
-.field--subtitle#post_subtitle {
-  @extend .post__subtitle;
+article h2 {
+  color: var(--color-light);
+  font-weight: var(--font-weight-normal);
+  font-size: var(--font-size-subtitle);
+  margin-top: 0;
+}
+
+article header {
+  margin: var(--large) 0;
+}
+
+article .post__time {
+  color: var(--color-light);
+  font-size: var(--font-size-small);
+}
+
+article .post__actions {
+  display: flex;
+}
+
+article .post__actions li {
+  margin-right: var(--tiny);
+  color: var(--color-light);
+  font-size: var(--font-size-small);
+  border-bottom: 1px solid var(--color-stroke);
+}
+
+article .post__actions li:hover {
+  border-bottom-color: var(--color-display);
+}
+
+article .post__byline {
+  color: var(--color-light);
+  font-size: var(--font-size-small);
+
+  margin: var(--small) 0 0 0;
 }
