--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,22 +5,18 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <style>
       :root {
-        --accent-color: <%= Newsletter.accent_color %>
+        --color-accent: <%= Newsletter.accent_color %>;
       }
     </style>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= yield :head %>
   </head>
-
   <body>
     <%= render "shared/navbar" %>
-    <div class="container">
-      <%= yield %>
-      <%= render "shared/footer" %>
-    </div>
+    <div class="l-wrapper"><%= yield %></div>
+    <%= render "shared/footer" %>
   </body>
 </html>
