--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,13 +1,16 @@
-<div class="header">
-  <%= image_tag "logo.png", alt: "Logo", class: "header__logo" %>
-  <section class="header__about">
-    <h1 class="header__title"><%= Newsletter.title %></h1>
-    <p class="header__description"><%= Newsletter.description %></p>
-    <div class="header__stats"><%= pluralize Post.published.count, "issue" %> &middot; <%= pluralize Subscriber.all.count, "subscriber" %></div>
-    <%= render partial: "shared/subscribe", locals: {subscriber: @subscriber} %>
+<div class="l-container">
+  <div class="header">
+    <%= image_tag "logo.png", alt: "Logo", class: "header__logo" %>
+    <section class="header__about">
+      <h1 class="header__title"><%= Newsletter.title %></h1>
+      <p class="header__description"><%= Newsletter.description %></p>
+      <%= render partial: "shared/subscribe", locals: {subscriber: @subscriber} %>
+      <div class="header__stats"><%= pluralize Post.published.count, "issue" %> &middot; <%= pluralize Subscriber.all.count, "subscriber" %></div>
+    </section>
+  </div>
+  <section>
+    <div class="index">
+      <%= render @posts %>
+    </div>
   </section>
 </div>
-<hr>
-<section>
-  <%= render "shared/posts", empty_message: "No posts yet. Subscribe so you don't miss anything!", posts: @posts %>
-</section>
