--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,9 +1,9 @@
 <footer class="l-container l-footer">
   <div class="l-footer__title"><%= link_to Newsletter.title, root_path %></div>
   <ul class="l-footer__links">
-    <li><%= link_to 'About', '#' %></li>
-    <li><%= link_to 'Archive', '#' %></li>
-    <li><%= link_to 'Send me an email', '#' %></li>
+    <li><%= link_to 'About', about_path %></li>
+    <li><%= link_to 'Archive', posts_path %></li>
+    <li><%= mail_to Newsletter.to, 'Send me an email' %></li>
   </ul>
   <div class="l-footer__meta">
     <div class="l-footer__copyright">© 2020 <%= Newsletter.author %></div>
