--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,11 +1,9 @@
 <div class="l-container">
-  <div class="header">
-    <%= image_tag "logo.png", alt: "Logo", class: "header__logo" %>
-    <section class="header__about">
-      <h1 class="header__title"><%= Newsletter.title %></h1>
-      <p class="header__description"><%= Newsletter.description %></p>
+  <div class="l-header">
+    <section class="l-header__about">
+      <h1 class="l-header__title">Archive</h1>
+      <p class="l-header__description"><%= pluralize Post.published.count, "issue" %>.</p>
       <%= render partial: "shared/subscribe", locals: {subscriber: @subscriber} %>
-      <div class="header__stats"><%= pluralize Post.published.count, "issue" %> &middot; <%= pluralize Subscriber.all.count, "subscriber" %></div>
     </section>
   </div>
   <section>
