--- a/app/views/writers/_writer.html.erb
+++ b/app/views/writers/_writer.html.erb
@@ -2,9 +2,16 @@
   <a href="<%= url_for(writer) %>">
     <span class="link--primary"><%= writer.name %></span><span class="link--secondary">&nbsp;&mdash;&nbsp;<%= writer.email %></span>
   </a>
-  <% if current_writer.email == writer.email %>
+  <% if writer.has_role? :friend %>
+    <% if current_writer.email == writer.email %>
+      <div>
+        <%= link_to "✕", writer_path(writer), method: 'delete', class: 'action--danger', data: {confirm: "Are you sure you want to remove #{writer.name}?"} %>
+      </div>
+    <% end %>
+  <% else %>
     <div>
-      <%= link_to "✕", writer_path(writer), method: 'delete', class: 'action--danger', data: {confirm: "Are you sure you want to remove #{writer.name}?"} %>
+      <span><%= link_to "Approve", approve_writer_path(writer), method: 'post' %></span>
+      <span class="action--danger"><%= link_to "Reject", approve_writer_path(writer), method: 'delete', data: { confirm: "Are you sure you want to reject #{writer.name}?" } %></span>
     </div>
   <% end %>
 </div>
