Settings form WIP

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -253,6 +253,10 @@ textarea[name="post[subtitle]"] {
   flex-direction: row-reverse;
 }
 
+.dashboard section > h2 {
+  margin-bottom: var(--small);
+}
+
 .dashboard .subscribers__count {
   color: var(--color-light);
 }
