--- a/app/assets/stylesheets/newsletters.scss
+++ b/app/assets/stylesheets/newsletters.scss
@@ -1,3 +1,3 @@
-// Place all the styles related to the Newsletter controller here.
+// Place all the styles related to the Newsletters controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
