--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,10 +21,10 @@
 .flash {
   color: var(--color-light);
   font-size: var(--font-size-small);
-  padding: var(--small) var(--medium);
+  padding: var(--m) var(--l);
   border: 1px solid var(--color-stroke);
   border-radius: 4px;
-  margin: var(--medium) auto;
+  margin: var(--l) auto;
 }
 
 /*
@@ -32,7 +32,7 @@
  */
 
 .field {
-  margin: var(--medium) 0;
+  margin: var(--l) 0;
   color: var(--color-light);
   font-size: var(--font-size-small);
 }
@@ -42,14 +42,14 @@
 }
 
 .devise input[type="submit"] {
-  margin: 0 0 var(--medium);
+  margin: 0 0 var(--l);
 }
 
 /*
  * devise#all, posts#new
  */
 .actions {
-  margin: var(--small) 0;
+  margin: var(--m) 0;
 }
 
 .actions label {
@@ -68,7 +68,7 @@ textarea[name="post[subtitle]"] {
 textarea[name="post[title]"] {
   font-size: var(--font-size-title);
   font-weight: var(--font-weight-bold);
-  margin-bottom: var(--tiny);
+  margin-bottom: var(--xs);
 }
 
 textarea[name="post[subtitle]"] {
@@ -82,7 +82,7 @@ textarea[name="post[subtitle]"] {
  */
 
 .subscribe {
-  margin: var(--small) 0;
+  margin: var(--m) 0;
 }
 
 .subscribe form {
@@ -100,12 +100,12 @@ textarea[name="post[subtitle]"] {
 }
 
 .subscribe input[type="submit"] {
-  margin-left: var(--tiny);
+  margin-left: var(--xs);
 }
 
 @media screen and (max-width: 650px) {
   .subscribe input[type="submit"] {
-    margin: var(--small) 0 0;
+    margin: var(--m) 0 0;
   }
 }
 
@@ -115,7 +115,7 @@ textarea[name="post[subtitle]"] {
 }
 
 .index {
-  padding: var(--large) 0;
+  padding: var(--xl) 0;
 }
 
 .home__background {
@@ -140,7 +140,7 @@ textarea[name="post[subtitle]"] {
  */
 
 .post {
-  padding: var(--small) 0;
+  padding: var(--m) 0;
   display: block;
   position: relative;
 }
@@ -154,7 +154,7 @@ textarea[name="post[subtitle]"] {
   right: 0;
   top: 0;
   bottom: 0;
-  margin: 0 calc(-1 * var(--small));
+  margin: 0 calc(-1 * var(--m));
   border-radius: 8px;
 }
 
@@ -169,7 +169,7 @@ textarea[name="post[subtitle]"] {
   color: var(--color-light);
 
   width: 100%;
-  margin: 0 0 var(--micro);
+  margin: 0 0 var(--xxs);
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -194,8 +194,8 @@ textarea[name="post[subtitle]"] {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: var(--medium);
-  margin: var(--small) 0;
+  padding: var(--l);
+  margin: var(--m) 0;
 }
 
 .link--secondary {
@@ -218,10 +218,10 @@ textarea[name="post[subtitle]"] {
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  height: var(--small);
+  height: var(--m);
   border-radius: 4px;
-  padding: 0 var(--extra-small);
-  margin: 0 0 0 var(--micro);
+  padding: 0 var(--s);
+  margin: 0 0 0 var(--xxs);
 
   color: #fff;
   background: var(--color-light);
@@ -236,16 +236,16 @@ textarea[name="post[subtitle]"] {
   align-items: center;
   justify-content: space-between;
 
-  margin-bottom: var(--small);
+  margin-bottom: var(--m);
 }
 
 .heading-wrapper--with-action svg {
-  height: var(--small);
-  width: var(--small);
+  height: var(--m);
+  width: var(--m);
 }
 
 .button__icon {
-  margin-right: var(--tiny);
+  margin-right: var(--xs);
 }
 
 .dashboard {
@@ -254,7 +254,7 @@ textarea[name="post[subtitle]"] {
 }
 
 .dashboard section > h2 {
-  margin-bottom: var(--small);
+  margin-bottom: var(--m);
 }
 
 .dashboard .subscribers__count {
@@ -263,7 +263,7 @@ textarea[name="post[subtitle]"] {
 
 .dashboard .l-container {
   flex: 1;
-  margin: 0 var(--medium);
+  margin: 0 var(--l);
 }
 
 @media screen and (max-width: 650px) {
@@ -285,11 +285,11 @@ textarea[name="post[subtitle]"] {
   height: 48px;
   width: 48px;
   border-radius: 4px;
-  margin-right: var(--tiny);
+  margin-right: var(--xs);
 }
 
 .settings-form__horizontal input[type="color"] {
-  margin-right: var(--tiny);
+  margin-right: var(--xs);
 }
 
 details {
@@ -297,7 +297,7 @@ details {
 }
 
 #color-picker {
-  margin-top: var(--small);
+  margin-top: var(--m);
 }
 
 /*
@@ -305,7 +305,7 @@ details {
  */
 article h1 {
   color: var(--color-display);
-  margin-bottom: var(--tiny);
+  margin-bottom: var(--xs);
 }
 
 article h2 {
@@ -316,7 +316,7 @@ article h2 {
 }
 
 article header {
-  margin: var(--large) 0;
+  margin: var(--xl) 0;
 }
 
 article .post__time {
@@ -329,7 +329,7 @@ article .post__actions {
 }
 
 article .post__actions li {
-  margin-right: var(--tiny);
+  margin-right: var(--xs);
   color: var(--color-light);
   font-size: var(--font-size-small);
   border-bottom: 1px solid var(--color-stroke);
@@ -343,5 +343,5 @@ article .post__byline {
   color: var(--color-light);
   font-size: var(--font-size-small);
 
-  margin: var(--small) 0 0 0;
+  margin: var(--m) 0 0 0;
 }
