--- a/app/assets/stylesheets/globals.scss
+++ b/app/assets/stylesheets/globals.scss
@@ -4,13 +4,13 @@
   --color-stroke: #0000000b;
   --color-body: #282851;
 
-  --big: 60px;
-  --large: 40px;
-  --medium: 30px;
-  --small: 20px;
-  --extra-small: 15px;
-  --tiny: 10px;
-  --micro: 5px;
+  --xxl: 60px;
+  --xl: 40px;
+  --l: 30px;
+  --m: 20px;
+  --s: 15px;
+  --xs: 10px;
+  --xxs: 5px;
 
   --font-family-display: Inter, system-ui, -apple-system, BlinkMacSystemFont,
     Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
@@ -59,7 +59,7 @@ body {
   line-height: var(--line-height-body);
   color: var(--color-display);
 
-  padding: 0 var(--tiny);
+  padding: 0 var(--xs);
 }
 
 .l-wrapper {
@@ -77,7 +77,7 @@ body {
   font-weight: var(--font-weight-semi-bold);
   color: var(--color-light);
 
-  padding: var(--small) 0;
+  padding: var(--m) 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -89,7 +89,7 @@ body {
   height: 48px;
   width: 48px;
   border-radius: 4px;
-  margin-right: var(--extra-small);
+  margin-right: var(--s);
 }
 
 .l-navbar__brand {
@@ -114,7 +114,7 @@ body {
   height: 3px;
   background: var(--color-light);
   width: 24px;
-  margin-bottom: var(--micro);
+  margin-bottom: var(--xxs);
 }
 
 .l-navbar__expand > div:last-child {
@@ -126,7 +126,7 @@ body {
 }
 
 .l-navbar__links li {
-  margin-left: var(--small);
+  margin-left: var(--m);
 }
 
 @media screen and (max-width: 650px) {
@@ -150,7 +150,7 @@ body {
     position: absolute;
     top: 100%;
     width: 100%;
-    padding: var(--small);
+    padding: var(--m);
     border-radius: 8px;
 
     background: #fff;
@@ -162,7 +162,7 @@ body {
   }
 
   .l-navbar__links li {
-    margin: calc(var(--tiny) / 2) 0;
+    margin: calc(var(--xs) / 2) 0;
   }
 }
 
@@ -179,16 +179,16 @@ body {
 }
 
 .l-header {
-  padding: var(--large) 0;
+  padding: var(--xl) 0;
   border-bottom: 1px solid var(--color-stroke);
 }
 
 .l-header h1 {
-  margin: 0 0 var(--tiny) 0;
+  margin: 0 0 var(--xs) 0;
 }
 
 .l-header__logo {
-  margin: 0 0 var(--small) 0;
+  margin: 0 0 var(--m) 0;
   width: 128px;
   height: 128px;
   border-radius: 8px;
@@ -207,7 +207,7 @@ body {
 .l-footer {
   font-size: var(--font-size-small);
   border-top: 1px solid var(--color-stroke);
-  padding: var(--large) 0;
+  padding: var(--xl) 0;
   color: var(--color-light);
 }
 
@@ -217,18 +217,18 @@ body {
 }
 
 .l-footer__links {
-  margin: var(--small) 0;
+  margin: var(--m) 0;
 }
 
 .l-footer__links li {
-  margin: var(--micro) 0;
+  margin: var(--xxs) 0;
 }
 
 .l-footer__meta {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: var(--medium) 0;
+  margin: var(--l) 0;
 }
 
 .l-footer__platform {
@@ -250,7 +250,7 @@ h5,
 h6 {
   line-height: var(--line-height-title);
   font-weight: var(--font-weight-bold);
-  margin: var(--small) 0 var(--tiny);
+  margin: var(--m) 0 var(--xs);
 }
 
 h1 {
@@ -277,17 +277,17 @@ a {
 hr {
   border: 0;
   border-top: 1px solid #f4f4f4;
-  margin: var(--tiny) 0;
+  margin: var(--xs) 0;
 }
 
 main {
-  padding: var(--large) 0;
+  padding: var(--xl) 0;
 }
 
 blockquote {
   border-left: 5px solid var(--color-accent);
-  margin: var(--small) 0 var(--small) var(--tiny);
-  padding: 0 0 0 var(--small);
+  margin: var(--m) 0 var(--m) var(--xs);
+  padding: 0 0 0 var(--m);
 }
 
 .button,
@@ -316,7 +316,7 @@ input[type="submit"] {
 
 .button--primary,
 .button--secondary {
-  padding: var(--extra-small) var(--large);
+  padding: var(--s) var(--xl);
   border-radius: 4px;
 }
 
@@ -340,7 +340,7 @@ textarea {
   color: var(--color-display);
   border: 1px solid var(--color-stroke);
   border-radius: 4px;
-  padding: var(--extra-small) var(--small);
+  padding: var(--s) var(--m);
   width: 100%;
 }
 
